[FIX][UI] Increase font size of topbar text; darken Lemon theme option background color for better readability.

--- a/themes/fivealive-lite/options/akebi/scss/_variables.scss
+++ b/themes/fivealive-lite/options/akebi/scss/_variables.scss
@@ -7,8 +7,7 @@ $bg-light: #18a3bb !important;
 
 $link-color: #0b8a98;
 $link-hover-color: #18a3bb;
-$link-color: #0b8a98;
-$link-hover-color: #18a3bb;
+
 $btn-primary-color: #ffffff;
 $btn-primary-bg: #18a3bb;
 $btn-primary-border: #77d6e5;
