--- a/themes/fivealive-lite/options/kiwi/css/kiwi.css
+++ b/themes/fivealive-lite/options/kiwi/css/kiwi.css
@@ -9,7 +9,7 @@ body.layout_social.tiki.navbar-padding {
   box-shadow: inset 0 28px 0 0 #cdbe23; }
 
 .middle .topbar {
-  font-size: small; }
+  font-size: 0.925rem; }
 
 nav.fixed-top {
   border-bottom: 5px solid #000; }
@@ -47,8 +47,8 @@ a:hover, .btn-link:hover, a:focus, .btn-link:focus {
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #f0e884;
-  border-color: #f0e884; }
+  background-color: #dacc1b;
+  border-color: #dacc1b; }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
@@ -277,7 +277,6 @@ input[type="checkbox"].preffilter-toggle-round:checked + label::before {
   color: #fff; }
 
 header.header .sitetitle, header.header .sitesubtitle {
-  color: #0b8a98;
   text-shadow: none; }
 
 .searchresults blockquote em, .highlight {
