--- a/themes/fivealive-lite/options/raspberry/scss/_variables.scss
+++ b/themes/fivealive-lite/options/raspberry/scss/_variables.scss
@@ -76,6 +76,7 @@ $navbar-fixed-top-bg: #b50964;
 $bg-dark: #b50964;
 $bg-light: #e60b7f;
 $card-border-color: #e60b7f;
+
 $table-border-color: #f459ab;
 $table-accent-bg: #f9f9f9;
 $table-hover-bg: #f5f5f5;
@@ -125,7 +126,7 @@ $theme-colors: (
 );
 
 // - - - - - - - - - -  - - - - - - Other variables, if any - - - - - - - - - - - - - - - - - //
-$bg-light-alt: #117485 !important;
+//$bg-light-alt: #117485 !important;
 
 $side-column-heading-color: #e60b7f;
 
