--- a/themes/fivealive-lite/scss/_selectors-for-options.scss
+++ b/themes/fivealive-lite/scss/_selectors-for-options.scss
@@ -22,7 +22,7 @@ body.layout_social.tiki.navbar-padding {
 }
 
 .middle .topbar {
-  font-size: small;
+  font-size: .925rem;
 }
 
 nav.fixed-top {
@@ -592,7 +592,7 @@ input[type="checkbox"].preffilter-toggle-round:checked + label::before {
 }
 header.header .sitetitle,
 header.header .sitesubtitle {
-  color: #0b8a98;
+//  color: #0b8a98;
   text-shadow: none;
 }
 .searchresults blockquote em,
